# mrmd

./: .gitignore  .mrmd_repl_history  PLAN-file-integrity-ux.md  README.md  TODO_for_release.md  explore.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
design/: Atelier.md  brand-and-naming.md  mrmd-saas-vision.md
docs/: COMPACT_MODE_DESIGN.md  DESIGN_SYSTEM.md  EXTRACTION_PLAN.md  PROJECTS_IMPLEMENTATION_PLAN.md  STABILIZATION_PLAN.md  TERMINAL_ARCHITECTURE.md  VENV_SWITCHING_PLAN.md  ai-integration-plan.md  api-reference.md  cli.md  js-notebook-design.md  learn-mrmd.md  phase1-design.md
editor/: INTERACTIVE_OUTPUT_PLAN.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
editor/demo/: index.html
editor/src/: index.ts
electron-app/: main.js  package-lock.json  package.json  preload.js
electron-app/scripts/: bundle-python.sh
examples/: browser-notebook.md  markdown-showcase.md  plot-test.md  python_plot_display_explained.md  tables-showcase.md  testnew.md  web-notebook.md
examples/markdown-features/: 00-index.md  01-headings.md  02-paragraphs.md  03-line-breaks.md  04-bold.md  05-italic.md  06-bold-italic.md  07-strikethrough.md  08-inline-code.md  09-fenced-code-blocks.md  10-syntax-highlighting.md  11-indented-code-blocks.md  12-unordered-lists.md  13-ordered-lists.md  14-nested-lists.md  15-task-lists.md  16-blockquotes.md  17-nested-blockquotes.md  18-blockquotes-with-elements.md  20-inline-links.md  (+31 more)
frontend/: .gitignore  build.cjs  package-lock.json  package.json  tsconfig.json
scripts/: deploy-runpod.sh
src/: client.js  daemon.js  index.js
test/: client-reconnect.test.js  daemon.integration.test.js  executions-visibility.test.js  interrupt.test.js  monitor-headless.test.js  monitor-output-block-replacement.test.js  preferences.test.js  python-discovery.test.js  stop-execution.test.js
vscode/: package-lock.json  package.json
(+216 files in other folders)
